--- a/templates/base.html
+++ b/templates/base.html
@@ -3,56 +3,55 @@
 <html lang="en">
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <link
       rel="stylesheet"
       href="{% static '/css/bootstrap/bootstrap.min.css'%}"
     />
-    <link rel="stylesheet" href="{% static '/css/main.css'%}" />
 
+    <link rel="stylesheet" href="{% static '/css/main.css'%}" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
-        <a class="navbar-brand" href="#"
-          ><i class="fas fa-bug"></i> BugTracker</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'tracker:homepage' %}"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            {% if request.user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'tracker:project-list'%}"
-                >My Projects</a
-              >
-            </li>
-            {% if request.user.is_staff %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'accounts:account-assignment'%}"
-                >User Assignment</a
-              >
-            </li>
-            {% endif %} {% endif %}
-          </ul>
+    <main class="row" role="main">
+      <nav class="nav flex-column sidenav">
+        <ul class="side-navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'tracker:homepage' %}">
+              <i class="fas fa-home"></i>
+              <span class="link-text">Home</span>
+            </a>
+          </li>
           {% if request.user.is_authenticated %}
-          <div class="mr-1 pr-1">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'tracker:project-list'%}">
+              <i class="fas fa-stream"></i>
+              <span class="link-text"> My Projects </span>
+            </a>
+          </li>
+          {% if request.user.is_staff %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:account-assignment'%}">
+              <i class="fas fa-users-cog"></i>
+              <span class="link-text"> User Assignment </span>
+            </a>
+          </li>
+          {% endif %} {% endif %}
+          <li class="nav-item logo">
+            <a class="nav-link" href="#">
+              <i class="fas fa-bug"></i>
+              <span class="link-text">BugTracker</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="col-md-2 .d-sm-none .d-md-block"></div>
+      <div class="col-md-10">
+        <div class="top-bar">
+          <div class="top-items mr-1 pr-1">
+            {% if request.user.is_authenticated %}
             <span
               class="badge badge-{% if request.user.role == 1 %}primary{% elif request.user.role == 2 %}warning{% else %}success{% endif %}"
               >{{ request.user.get_role_display }}</span
@@ -60,38 +59,36 @@
             <span class="mx-1 px-1 border-left border-right border-secondary"
               >{{ request.user }}</span
             >
+            <a href="{%url 'accounts:logout'%}" class="btn btn-primary mr-2"
+              >Logout</a
+            >
+            {% else %}
+            <a
+              href="{%url 'accounts:registration'%}"
+              class="btn btn-primary mr-2"
+              >Signup</a
+            >
+            <a href="{%url 'accounts:login'%}" class="btn btn-primary">Login</a>
+            {% endif %}
           </div>
-          <a href="{%url 'accounts:logout'%}" class="btn btn-primary mr-2"
-            >Logout</a
-          >
-          {% else %}
-          <a href="{%url 'accounts:registration'%}" class="btn btn-primary mr-2"
-            >Signup</a
-          >
-          <a href="{%url 'accounts:login'%}" class="btn btn-primary">Login</a>
-          {% endif %}
         </div>
-      </nav>
-    </header>
-    <main role="main">{% block content %} {% endblock content %}</main>
-    <footer class="text-muted">
-      <div class="container">
-        <p class="float-right">
-          <a href="#">Back to top</a>
-        </p>
-        <p>
-          Album example is © Bootstrap, but please download and customize it for
-          yourself!
-        </p>
-        <p>
-          New to Bootstrap?
-          <a href="https://getbootstrap.com/">Visit the homepage</a> or read our
-          <a href="/docs/4.3/getting-started/introduction/"
-            >getting started guide</a
-          >.
-        </p>
+
+        {% block content %} {% endblock content %}
+
+        <footer class="text-muted">
+          <div class="container">
+            <p class="float-right">
+              <a href="#">Back to top</a>
+            </p>
+            <p>
+              Album example is © Bootstrap, but please download and customize it
+              for yourself!
+            </p>
+          </div>
+        </footer>
       </div>
-    </footer>
+    </main>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
