--- a/templates/tracker/project_creating.html
+++ b/templates/tracker/project_creating.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<div class="container col-3">
+<div class="container col-md-3">
   <form method="POST" id="creation">
     {% csrf_token %} {{form.name}} {{form.description}} {{form.manager}}
     {{form.public}}
