--- a/templates/tracker/project_form.html
+++ b/templates/tracker/project_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<div class="container col-4">
+<div class="container col-md-4">
   <div class="card mt-2">
     <div class="card-header">Project Creation</div>
     <form method="POST" id="create_project" class="m-2">
