--- a/templates/tracker/project_list.html
+++ b/templates/tracker/project_list.html
@@ -17,7 +17,7 @@
         <div class="input-group" width="100%">
           <input type="text" class="form-control" id="search_bar" width="100% "name="search" placeholder="Search by Project name"></input>
           <span class="input-group-btn">
-            <button class="btn btn-primary" id="filter_btn" type="submit">Search</button>
+            <button class="btn btn-primary d-flex align-center" id="filter_btn" type="submit"><i class="fas fa-search"></i></button>
           </span>
         </div>
       </form>
