--- a/templates/base.html
+++ b/templates/base.html
@@ -47,8 +47,8 @@
           </li>
         </ul>
       </nav>
-      <div class="col-md-2 .d-sm-none .d-md-block"></div>
-      <div class="col-md-10">
+      <div class="col-md-1 .d-sm-none .d-md-block"></div>
+      <div class="col-md-11">
         <div class="top-bar">
           <div class="top-items mr-1 pr-1">
             {% if request.user.is_authenticated %}
@@ -89,15 +89,13 @@
       </div>
     </main>
 
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{% static '/js/bootstrap/bootstrap.bundle.min.js'%}"></script>
     <script
       src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
       data-auto-a11y="true"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+    <script src="{% static '/js/main/user_charts.js' %}"></script>
   </body>
 </html>
