--- a/templates/tracker/project_detail.html
+++ b/templates/tracker/project_detail.html
@@ -104,8 +104,8 @@
             id="search_bar"
             placeholder="Search by Ticket Title"
           />
-          <button class="btn btn-primary" id="filter_btn" type="submit">
-            Search
+          <button class="btn btn-primary d-flex align-center" id="filter_btn" type="submit">
+            <i class="fas fa-search"></i>
           </button>
         </div>
       </form>
@@ -129,7 +129,18 @@
             </td>
             <td>{{ ticket.tag}}</td>
             <td>{{ ticket.get_priority_display}}</td>
-            <td>{{ ticket.get_status_display}}</td>
+            <td>
+            <div class="progress">
+              <div 
+                class="progress-bar progress-bar-striped {% if ticket.status == 1  %}bg-danger{% elif ticket.status == 2 %}bg-warning {% elif ticket.status == 3 %} bg-info {% elif ticket.status == 4 %} bg-success {% endif %}" 
+                role="progressbar" 
+                style="width:{% if ticket.status == 1  %}10%{% elif ticket.status == 2 %}30% {% elif ticket.status == 3 %} 50% {% elif ticket.status == 4 %} 100% {% endif %}" 
+                aria-valuenow="50" 
+                aria-valuemin="0" 
+                aria-valuemax="100">
+              </div>
+            </div>
+            </td>
           </tr>
           {% endfor %}
         </tbody>
