--- a/templates/tracker/ticket_detail.html
+++ b/templates/tracker/ticket_detail.html
@@ -1,125 +1,177 @@
 {% extends 'base.html' %} {% block content %}
-<div class="container">
-  <div class="card mt-2">
-    <div class="card-header d-flex justify-content-between">
-      <span
-        class="badge badge-pill badge-{% if ticket.tag.id == 1 %}warning{%elif ticket.tag.id == 2%}success{%endif%} d-inline-flex align-items-center"
-        ><span>{{ticket.tag}}</span></span
-      >
-      <span class="center">Ticket {{ticket.id}}</span>
-      <span class="float-right">Created: {{ ticket.date_created}}</span>
-    </div>
-    <table class="table">
-      <tbody>
-        <tr>
-          <th>Title</th>
-          <td>{{ticket.title}}</td>
-          <th>Description</th>
-          <td>{{ticket.description}}</td>
-        </tr>
-        <tr>
-          <th>Project</th>
-          <td>{{ticket.project}}</td>
-          <th>Requester</th>
-          <td>{{ticket.requester}}</td>
-        </tr>
-        <tr>
-          <th>Priority</th>
-          <td>{{ticket.get_priority_display}}</td>
-          <th>Deadline</th>
-          <td>{{ticket.deadline}}</td>
-        </tr>
-        <tr>
-          <th>User Assigned:</th>
-          {% if request.user.role != 1 %} {% if ticket.assigned %}
-          <td>{{ticket.assigned}}</td>
-          {% else %}
-          <td>No user assigned</td>
-          {% endif %} {% else %}
-          <td>
-            <form method="POST" class="d-flex flex-row">
-              {% csrf_token %} {{ ticket_assigned_form.assigned}}
-              <button class="btn btn-primary" type="submit" value="assign">
-                Assign
-              </button>
-            </form>
-          </td>
-          {% endif %}
-          <th>Status</th>
-          {% if request.user.role == 1 %}
-          <td>
-            <form method="POST" class="d-flex flex-row">
-              {% csrf_token %} {{ ticket_status_form.status}}
-              <button
-                class="btn btn-primary"
-                type="submit"
-                value="update_status"
-              >
-                Update
-              </button>
-            </form>
-          </td>
+{% load custom_filter %}
 
-          {% else %}
 
-          <td>{{ ticket.status}}</td>
-          {% endif %}
-        </tr>
-      </tbody>
-    </table>
-    {% if ticket.assigned == request.user and ticket.status == 2 %}
-    <div class="card-footer">
-      <form method="POST">
-        {% csrf_token %}
-        <button class="btn btn-warning btn-block" name="start">Start</button>
-      </form>
-    </div>
-    {% endif %} {% if ticket.assigned == request.user and ticket.status == 3 %}
-    <div class="card-footer">
-      <form method="POST">
-        {% csrf_token %}
-        <button class="btn btn-danger btn-block" name="finish">Finish</button>
-      </form>
-    </div>
-    {% endif %}
-  </div>
-  <div class="card mt-2">
-    <div class="card-header">Comments</div>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>User</th>
-          <th>Comment</th>
-          <th>Files</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for comment in ticket.ticketcoment.all %}
-        <tr>
-          <td>{{comment.user}}</td>
-          <td>{{comment.comment}}</td>
-          <td>
-            {% if comment.file %}
-            <a href="{{ comment.file.url }}">{{comment.file}}</a>
-            {% endif %}
-          </td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-    <div class="card-footer">
-      <form enctype="multipart/form-data" method="POST">
-        {% csrf_token%}
-        <div class="form-group">{{ form.comment.label}} {{ form.comment }}</div>
-        <div class="form-group">
-          <label class="">Support Files</label>
-          {{form.file}}
+  <div class="row ticket-row">
+    <div class="col">
+      <div class="card mt-2">
+        <div class="card-header d-flex justify-content-between">
+          <span
+            class="badge badge-pill badge-{% if ticket.tag.id == 1 %}warning{%elif ticket.tag.id == 2%}success{%endif%} d-inline-flex align-items-center"
+            ><span>{{ticket.tag}}</span></span
+          >
+          <span class="center">Ticket {{ticket.id}}</span>
+          <span class="float-right">Created: {{ ticket.date_created}}</span>
         </div>
-        <button type="submit" class="btn btn-primary float-right">
-          Submit
-        </button>
-      </form>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th>Title</th>
+              <td>{{ticket.title}}</td>
+              <th>Description</th>
+              <td>{{ticket.description}}</td>
+            </tr>
+            <tr>
+              <th>Project</th>
+              <td>{{ticket.project}}</td>
+              <th>Requester</th>
+              <td>{{ticket.requester}}</td>
+            </tr>
+            <tr>
+              <th>Priority</th>
+              <td>{{ticket.get_priority_display}}</td>
+              <th>Deadline</th>
+              <td>{{ticket.deadline}}</td>
+            </tr>
+            <tr>
+              <th>User Assigned:</th>
+              {% if request.user.role != 1 %} {% if ticket.assigned %}
+              <td>{{ticket.assigned}}</td>
+              {% else %}
+              <td>No user assigned</td>
+              {% endif %} {% else %}
+              <td>
+                <form method="POST" class="d-flex flex-row">
+                  {% csrf_token %} {{ ticket_assigned_form.assigned}}
+                  <button class="btn btn-primary" type="submit" value="assign">
+                    Assign
+                  </button>
+                </form>
+              </td>
+              {% endif %}
+              <th>Status</th>
+              {% if request.user.role == 1 %}
+              <td>
+                <form method="POST" class="d-flex flex-row">
+                  {% csrf_token %} {{ ticket_status_form.status}}
+                  <button
+                    class="btn btn-primary"
+                    type="submit"
+                    value="update_status"
+                  >
+                    Update
+                  </button>
+                </form>
+              </td>
+    
+              {% else %}
+    
+              <td>{{ ticket.status}}</td>
+              {% endif %}
+            </tr>
+          </tbody>
+        </table>
+        {% if ticket.assigned == request.user and ticket.status == 2 %}
+        <div class="card-footer">
+          <form method="POST">
+            {% csrf_token %}
+            <button class="btn btn-warning btn-block" name="start">Start</button>
+          </form>
+        </div>
+        {% endif %} {% if ticket.assigned == request.user and ticket.status == 3 %}
+        <div class="card-footer">
+          <form method="POST">
+            {% csrf_token %}
+            <button class="btn btn-danger btn-block" name="finish">Finish</button>
+          </form>
+        </div>
+        {% endif %}
+      </div>
+    </div>
+    <div class="col">
+      <div class="card mt-2">
+        <div class="card-header">Comments</div>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>User</th>
+              <th>Comment</th>
+              <th>Files</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for comment in ticket.ticketcoment.all %}
+            <tr>
+              <td>{{comment.user}}</td>
+              <td>{{comment.comment}}</td>
+              <td>
+                {% if comment.file %}
+                <a href="{{ comment.file.url }}">{{comment.file}}</a>
+                {% endif %}
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        <div class="card-footer">
+          <form enctype="multipart/form-data" method="POST">
+            {% csrf_token%}
+            <div class="form-group">{{ form.comment.label}} {{ form.comment }}</div>
+            <div class="form-group">
+              <label class="">Support Files</label>
+              {{form.file}}
+            </div>
+            <button type="submit" class="btn btn-primary float-right">
+              Submit
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-{% endblock content %}
+
+  <div class="row ticket-row">
+    <div class="card">
+      <div class="card-header">History</div>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Property</th>
+            <th>Old Value</th>
+            <th>New Value</th>
+            <th>User</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for change in history %}
+          <tr>
+            <td>{{ change.instance.field|title }}  </td>
+            <td>
+            {% if change.instance.field == 'status' %}
+              {{ change.instance.old | get_custom_status_display }}
+            {% elif change.instance.field == 'assigned' %}
+              {{change.instance.old | get_user_email}}
+            {% else %}
+              {{change.instance.old}}
+            {% endif %}
+            </td>
+            <td>
+            {% if change.instance.field == 'status' %}
+              {{ change.instance.new | get_custom_status_display }}
+            {% elif change.instance.field == 'assigned'%}
+              {{change.instance.new | get_user_email}}
+            {% else %}
+              {{ change.instance.old}}
+            {% endif %}
+            </td>
+            <td>{{ change.user.email}}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </div>
+    </div>
+  </div>
+
+
+
+  {% endblock content %}
