--- a/static/css/signin.css
+++ b/static/css/signin.css
@@ -8,8 +8,9 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  background: linear-gradient(45deg, rgba(29, 139, 248, 0.9) 0%, rgba(50, 89, 244, 0.9) 100%), url("../img/hero-bg.jpg") center center no-repeat;
 }
+
 
 .form-signin {
   width: 100%;
@@ -39,4 +40,54 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+
+.btn{
+  border-radius: .5rem;
+  color:black;
+  border: 1px solid white;
+}
+
+.btn-primary {
+  background-image: linear-gradient(
+    to bottom left,
+    #1d8cf8,
+    #3358f4,
+    #1d8cf8
+  ) !important;
+}
+
+.btn-warning {
+  background-image: linear-gradient(
+    to bottom left,
+    #FFFF00,
+    #FFD700,
+    #FFFF00
+  ) !important;
+}
+.btn-success {
+  background-image: linear-gradient(
+    to bottom left,
+    #3CB371,
+    #2E8B57,
+    #3CB371
+  ) !important;
+}
+
+.btn-demo{
+  height: 5rem;
+}
+
+
+.sign-text{
+  color: black;
+}
+
+.not_member{
+  color: black;
+}
+
+.not_member a{
+  text-decoration-color: white;
+  color: white;
 }
