--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %} {% block content %}
 {% load custom_tag %}
   {% if request.user.role == 1 %}
-  <div class="row">
-    <div class="col">
+  <div class="row row-pm">
+    <div class="col-12 ">
       <div class="card">
         <div class="card-header">
           My projects
