--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %} {% block content %}
 {% load custom_tag %}
   {% if request.user.role == 1 %}
-  <div class="row row-pm">
-    <div class="col-12 ">
+  <div class="row">
+    <div class="col-lg-12">
       <div class="card">
         <div class="card-header">
           My projects
         </div>
         <div id="pm_chart_body">
-          <canvas id="pm_chart" width="200px" height="100px"></canvas>
+          <canvas id="pm_chart" height="75"></canvas>
         </div>
       </div>
     </div>
@@ -16,8 +16,8 @@
 
   {% endif %}
 
-  <div class="row home_1row">
-    <div class="col-6">
+  <div class="row">
+    <div class="col-lg-6">
       <div class="card" id="tickets_sent">
         <div class="card-header">Tickets Sent</div>
         <div id="tickets_sent_body">
@@ -25,12 +25,12 @@
         </div>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-lg-6">
       <div class="card">
         <div class="card-header">
           Tickets Sent
         </div>
-        <table class="table">
+        <table class="table table-responsive">
           <thead>
             <tr>
               <th>Project</th>
@@ -85,7 +85,13 @@
           </ul>
         </div>
       </div>
-      {% if request.user.role == 1 or request.user.role == 2 %}
+    </div>
+  </div>
+
+    {% if request.user.role == 1 or request.user.role == 2 %}
+    <div class="row">
+      <div class="col-md-12">
+
         <div class="card">
           <div class="card-header">
             Tickets to solve
@@ -145,10 +151,10 @@
             </ul>
           </div>
         </div>
-      {% endif %}
-
+      </div>
     </div>
-  </div>
+
+    {% endif %}
 {% endblock content %}
 
 
