--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Techie Bootstrap Template - Index</title>
+  <title>Bug Tracker - VSA</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
