updated color scheme

--- a/templates/tracker/project_detail.html
+++ b/templates/tracker/project_detail.html
@@ -56,7 +56,7 @@
           <tr>
             <th>Project Stakeholders</th>
             <td>
-              <table class="table">
+              <table class="table" id="table_stakeholder">
                 <tbody>
                   {% for stakeholder in object.stakeholder.all %}
                   <tr>
