--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,11 +19,7 @@
 
 html,
 body {
-  background: linear-gradient(
-    8deg,
-    rgba(31, 31, 40, 1) 0%,
-    rgba(30, 30, 47, 1) 92%
-  );
+  background: linear-gradient(45deg, rgba(29, 139, 248, 0.9) 0%, rgba(50, 89, 244, 0.9) 100%), url("../img/hero-bg.jpg") center center no-repeat;
   background-attachment: fixed;
   background-repeat: no-repeat;
   font-size: 1.2rem;
@@ -55,6 +51,7 @@ footer {
 
 .row{
   margin:auto;
+  margin-bottom: 1rem;
 }
 
 .top-bar {
@@ -205,44 +202,51 @@ footer {
     min-width: 2rem;
   }
 }
+
 .ticket-row{
   margin-right:1rem;
 }
 
 .card {
-  background: #27293d;
-  border: 0;
+  background: white;
+  border: 1px solid rgba(0,0,0,0.3);
   position: relative;
   width: 100%;
-  margin-bottom: 30px;
   box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.1);
-  color: white;
+  color:black;
+  min-height: 100%;
 }
 
 .card .table {
-  color: white;
-  margin-top: 1rem;
+  color: black;
+}
+
+.card .table thead tr th{
+  border-top: none;
 }
 
 
 .table a {
   text-decoration: none;
-  color: hsla(0, 0%, 100%, 0.7);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .input-group input {
-  background: #27293d;
-  border-color: rgba(255,255,255,.3);
-  color: white;
+  background: white;
+  border-color: rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 0.7);;
 }
 
 .input-group input:hover {
-  border-color: rgba(255,255,255,.9);
+  border-color: rgba(0, 0, 0, 0.7);;
 }
 
 .input-group input:focus {
-  background: #27293d;
-  border-color: rgba(255,255,255,.9);
-  color: white;
+  background: white;
+  border-color:rgba(0, 0, 0, 0.9);;
+  color: rgba(0, 0, 0, 0.7);;
 }
 
+#table_stakeholder tbody tr:first-child td {
+  border-top: none;
+}
